# rust-n5

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml
benches/: parallel_write.rs  simple.rs
examples/: readme.rs
src/: data_type.rs  filesystem.rs  lib.rs  ndarray.rs  prelude.rs  tests.rs  version.rs
src/compression/: brotli.rs  bzip.rs  gzip.rs  lz.rs  lz_pure.rs  mod.rs  raw.rs  xz.rs
tests/: integration_test.rs  ndarray.rs
