[package]
name = "n5"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Andrew Champion <andrew.champion@gmail.com>"]
description = "Rust implementation of the N5 tensor file system format"
readme = "README.md"
repository = "https://github.com/aschampion/rust-n5"
keywords = ["tensor"]
categories = ["science"]

[features]
default = ["bzip", "gzip", "lz", "use_ndarray", "xz"]

bzip = ["bzip2"]
gzip = ["flate2"]
lz = ["lz4"]
use_ndarray = ["itertools", "ndarray", "num-traits"]
xz = ["xz2"]

[dependencies]
byteorder = "1"
fs2 = "0.4"
lazy_static = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = "0.2"

bzip2 = { version = "0.3", optional = true }
# Use pure-rust Gzip for convenience. TODO: evaluate libflate as alternative.
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false, optional = true }
itertools = { version = "0.7", optional = true }
lz4 = { version = "1.0", optional = true }
ndarray = { version = "0.11", optional = true }
num-traits = { version = "0.2", optional = true }
xz2 = { version = "0.1", optional = true }

[dev-dependencies]
bencher = "0.1.5"
futures = "0.1"
futures-cpupool = "0.1.8"
image = { version = "0.18", default-features = false, features = ["tiff"] }
rand = "0.4"
rayon = "1"
tempdir = "0.3"

[patch.crates-io]
image = { git = "https://github.com/aschampion/image", branch = "issues/tiff-multi-image" }
